added a small HTML web project

--- a/web-dev-course/02section/index.html
+++ b/web-dev-course/02section/index.html
@@ -17,5 +17,70 @@
     <!-- body tag holds all visible content -->
     <body>
         <h1>This is my first website!</h1>
-        <p>This is my basic webpage. Yes, I'll be looking to improve it.  </p> </body>
+        <h2>This is my first website!</h2>
+        <h3>This is my first website!</h3>
+        <h3>This is my first website!</h3>
+        <p>This is my basic webpage. Yes, I'll be looking to improve it.  </p>
+        <div>
+            Let me now make a table:
+            <table border="5">
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                </tr>
+                <tr>
+                    <td>Alice</td>
+                    <td>25</td>
+                </tr>
+                <tr>
+                    <td>Isaac</td>
+                    <td>25</td>
+                </tr>
+                <tr>
+                    <td>Jacob</td>
+                    <td>17</td>
+                </tr>
+                <tr>
+                    <td>Veronica</td>
+                    <td>40</td>
+                </tr>
+            </table>
+        </div>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+    </ul>
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+    </ol>
+    <ul>
+        <li>HTML Structure</li>
+        <li>Meta Tags</li>
+        <li>Headings, Paragraphs, Spans, and Divs</li>
+        <li>Lists</li>
+        <li>Tables</li>
+        <li>Forms</li>
+    </ul>    
+    <div style="background-color: aqua">
+              <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" required>
+                <br />
+                <label type="email">Email:</label>
+                <input type="email" id="email" required />
+                <br />
+                <label for="password">Password</label>
+                <input type="password" id="password" required />
+                <br />
+                <select id="country">
+                    <option value="">Please Choose</option>
+                    <option value="USA">USA</option>
+                    <option value="Mexico">Mexico</option>
+                </select>
+                <br />
+                <button type="submit">Sign up</button>
+              </form>  
+    </div>
+    </body>
 </html>
